--- a/DataAccess/DataAccess.vbproj
+++ b/DataAccess/DataAccess.vbproj
@@ -82,6 +82,8 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <Compile Include="Repository\ClienteRepository.vb" />
+    <Compile Include="Repository\MasterRepository.vb" />
     <Compile Include="Repository\Repository.vb" />
   </ItemGroup>
   <ItemGroup>
