--- a/Presentation/App.config
+++ b/Presentation/App.config
@@ -3,7 +3,7 @@
     <configSections>
     </configSections>
     <connectionStrings>
-        <add name="cnn" connectionString="Data Source=DESKTOP-JLGSVE4\SQLEXPRESS;Initial Catalog=bdDALE;Integrated Security=True"
+        <add name="cnn" connectionString="Data Source=DESKTOP-JLGSVE4\SQLEXPRESS;Initial Catalog=bdAlgar;Integrated Security=True"
             providerName="System.Data.SqlClient" />
     </connectionStrings>
     <startup>
