--- a/DataAccess/DataAccess.vbproj
+++ b/DataAccess/DataAccess.vbproj
@@ -64,9 +64,11 @@
     <Import Include="System.Threading.Tasks" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Contracts\IPedidoERepository.vb" />
     <Compile Include="Contracts\IProductoRepository.vb" />
     <Compile Include="Contracts\IClienteRepository.vb" />
     <Compile Include="Contracts\IGenericReposotory.vb" />
+    <Compile Include="Entities\PedidoE.vb" />
     <Compile Include="Entities\Producto.vb" />
     <Compile Include="Entities\Cliente.vb" />
     <Compile Include="My Project\AssemblyInfo.vb" />
@@ -84,6 +86,7 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <Compile Include="Repository\PedidoERepository.vb" />
     <Compile Include="Repository\ProductoRepository.vb" />
     <Compile Include="Repository\ClienteRepository.vb" />
     <Compile Include="Repository\MasterRepository.vb" />
